--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -19,8 +19,8 @@
         </nav>
     </header>
     <main>
-        <table border="1">
-            <caption>Detailed schedule of events for TechCon 2024</caption>
+        <table>
+            <caption>Detailed Schedule of Events for TechCon 2024</caption>
             <tr>
                 <th scope="col">Time</th>
                 <th scope="col">Session</th>
